--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: black;
     text-align: center;
     z-index: 10;
 }
